<!--
    NOTICE - THIS CODE IS NOT TO BE USED FOR REAL DIVING. IT IS A SCHOOL PROJECT ONLY.
    DO NOT USE THIS APP FOR REAL DIVING. YOUR SAFETY IS NOT GUARANTEED.
    THIS IS NOT SAFETY CRITICAL SOFTWARE DEVELOPED BY PROFESSIONALS.
    IT IS AN APP CREATED BY COLLEGE STUDENTS FOR CLASSWORK ONLY.
-->


<resources>
    <string name="app_name">DiveSafe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="alititude">Altitude</string>
    <string name="titleString">Enter Dive Information</string>
    <string name="depth">Dive Depth:</string>
    <string name="depth_hint">Enter Depth...</string>
    <string name="bottomTime">Bottom Time:</string>
    <string name="pressureLabel">Pressure Group:</string>
    <string name="enterBottom">Enter Bottom Time...</string>
    <string name="pressureLetter">Enter Data...</string>
    <string name="buttonCalc">Done</string>
    <string name="title_activity_save_single_dive">SaveSingleDive</string>
    <string name="title_activity_save_full_dive">SaveFullDive</string>
    <string name="title_activity_save_diver">SaveDiver</string>

    <string-array name="NP_array">
        <item>NAUI</item>
        <item>PADI</item>
    </string-array>

    <string-array name="FM_array">
        <item>Feet</item>
        <item>Meters</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonAdd">Next</string>
    <string name="curdivestring">Current Dive:</string>
    <string name="presStop">Decompress Stop:</string>
    <string name="decompress">N/A</string>
    <string name="undoButton">Undo</string>
    <string name="SITtime">Add Surface Interval: </string>
    <string name="title_activity_results_screen">ResultsScreenActivity</string>
    <string name="result">Your Dive Outline</string>
    <string name="diveOverview">Dive Overview</string>
    <string name="title_activity_show_saved_dive">ShowSavedDive</string>
    <string name="title_activity_view_dives">ViewDives</string>
    <string name="pressureLetter2">N/A</string>
</resources>
